# slp-analizer

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
src/: README.md  handler.rs  main.rs  websocket.rs
