[package]
name = "slp_analyzer"
authors = ["Lucien Fiorini"]
version = "1.0.0"
edition = "2018"
license = "MIT"

[dependencies]
actix = "0.10"
actix-web = "3.3"
actix-web-actors = "3.0"
awc = "2.0"
reqwest = { version = "0.11", features = ["blocking"] }
bytes = "1.0"
env_logger = "0.9"
log = "0.4"
peppi = "1.0.0-alpha.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"